--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <link type="module" rel="stylesheet" href="app.css" >
 </head>
 <body>
-    <!-- <audio autoplay src="https://s3.amazonaws.com/freecodecamp/drums/Heater-1.mp3"></audio> -->
+ 
     <div id="root"></div>
-    <script type="text/babel" src="index.js" src="app.css" >
-       // import './App.css';
-    </script>
+    <script type="text/babel" src="index.js" src="app.css" ></script>
 
 </body>
 </html>
